--- a/index.html
+++ b/index.html
@@ -31,22 +31,17 @@
                                 <button class="button add-button" onclick="showAddPopup()">+ ADD A NEW ONE</button>
                             </td>
                             <td>
-                                <button class="button add-new-button" onclick="clearFields()"><img src = "assets/img/Deselect.png"> DESELECT</button>
+                                <button class="button add-new-button" onclick="clearFields()"><img class = "deselct__img" src = "assets/img/Deselect.png"> DESELECT</button>
                             </td>
                             <td>
-                                <div class="header__table__content">
-                                    <img src = "assets/img/InTotal.png">
-                                    In Total:
-                                    <p id="rowCount">
-                                    <span id="rowCountValue">0</span>
-                                  </p>
+                                <div class="header__table__content"><img class = "intotal__img" src = "assets/img/InTotal.png">In Total:<p id="rowCount"><span id="rowCountValue">0</span></p>
                                 </div>
                               </td>
                             <td>
-                                <button class="button export-button" onclick="showExportPopup()"><img src = "assets/img/Export.png">EXPORT</button>
+                                <button class="button export-button" onclick="showExportPopup()"><img class = "export__img" src = "assets/img/Export.png">EXPORT</button>
                             </td>
                             <td>
-                                <button class="button import-button" onclick="showImportPopup()"><img src = "assets/img/Import.png">IMPORT</button>
+                                <button class="button import-button" onclick="showImportPopup()"><img class = "import__img" src = "assets/img/Import.png">IMPORT</button>
                             </td>
                         </tr>
                     </tbody>
