--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
                     <div class="filter__inner">
                         <select>
                             <option value="option1">Месяц</option>
-                            <option value="option2">Год</option>
-                            <option value="option3">Пять лет</option>
+                            <option value="option2">6 Месяц</option>
+                            <option value="option3">3 Года</option>
+                            <option value="option4">5 Лет</option>
+                            <option value="option5">10 Лет</option>
                         </select>
                     </div>
                 </div>
@@ -128,13 +130,14 @@
               <table id="data-table">
                 <thead>
                   <tr>
-                    <th><a href="#" onclick="handleSort(0)">НОМЕР И ДАТА СЧЕТА</a></th>
-                    <th><a href="#" onclick="handleSort(1)">INNKOMPAN</a></th>
-                    <th><a href="#" onclick="handleSort(2)">NAZVKOMPAN</a></th>
-                    <th><a href="#" onclick="handleSort(3)">TELEF</a></th>
-                    <th><a href="#" onclick="handleSort(4)">ELPOCHTA</a></th>
-                    <th><a href="#" onclick="handleSort(5)">АКТИВНЫЕ ВАКАНСИИ</a></th>
-                    <th><a href="#" onclick="handleSort(6)">ИСТОЧНИК ОБЪЯВЛЕНИЯ</a></th>
+                    <th><a class = "" href="#" onclick="handleSort(0)">№ | id </a></th>
+                    <th><a class = "" href="#" onclick="handleSort(1)">ИНН Название компании Телефон(ы)</a></th>
+                    <th><a class = "" href="#" onclick="handleSort(2)">Бронь</a></th>
+                    <th><a class = "" href="#" onclick="handleSort(3)">Номер и дата расчета</a></th>
+                    <th><a class = "" href="#" onclick="handleSort(4)">Активные вакансии</a></th>
+                    <th><a class = "" href="#" onclick="handleSort(5)">Отклики</a></th>
+                    <th><a class = "" href="#" onclick="handleSort(6)">Источник объявления</a></th>
+                    <th><a class = "" href="#" onclick="handleSort(7)">Завершенные</a></th>
                   </tr>
                   <tr>
                     <td>
